--- a/site/RS/index.html
+++ b/site/RS/index.html
@@ -568,7 +568,7 @@
   
 
 
-<h1 id="configuration-of-poema-ix-route-server-at-as40115">Configuration of Poema IX Route Server at AS40115</h1>
+<h1 id="configuration-of-poema-ix-route-server-at-as40115">Configuration of MoeDove IX Route Server at AS40115</h1>
 <h2 id="bgp-sessions-default-configuration">BGP sessions default configuration</h2>
 <ul>
 <li><strong>Passive</strong> sessions are configured toward neighbors.</li>
